SubmitButton: fix loading indicator vertical alignment
for btn-sm and btn-lg

--- a/iti-react/index.scss
+++ b/iti-react/index.scss
@@ -38,6 +38,14 @@ button.submit-button {
         top: $btn-padding-y;
         left: 0;
     }
+
+    &.btn-sm .loading-icon-container {
+        top: $btn-padding-y-sm;
+    }
+
+    &.btn-lg .loading-icon-container {
+        top: $btn-padding-y-lg;
+    }
 }
 
 .in-progress-feedback {
